--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Uno Kim">
+    <meta name="author" content="lala9663 Kim">
     <title>게시글 페이지</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -23,8 +23,8 @@
     <div class="row g-5">
         <section class="col-md-5 col-lg-4 order-md-last">
             <aside>
-                <p><span>Uno</span></p>
-                <p><a href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
+                <p><span>lala9663</span></p>
+                <p><a href="mailto:djkehh@gmail.com">lala9663@mail.com</a></p>
                 <p><time datetime="2022-01-01T00:00:00">2022-01-01</time></p>
                 <p><span>#java</span></p>
             </aside>
@@ -51,7 +51,7 @@
             <ul class="row col-7">
                 <li>
                     <div>
-                        <strong>Uno</strong>
+                        <strong>lala9663</strong>
                         <small><time>2022-01-01</time></small>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <div>
-                        <strong>Uno</strong>
+                        <strong>lala9663</strong>
                         <small><time>2022-01-01</time></small>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
