--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -68,21 +68,21 @@
             <button type="submit">검색</button>
         </form>
 -->
-        <table class="table">
+        <table class="table" id="article-table">
             <thead>
                 <tr>
-                    <th class="col-6">제목</th>
-                    <th class="col-3">해시태그</th>
-                    <th class="col">작성자</th>
-                    <th class="col">    작성일</th>
+                    <th class="title col-6">제목</th>
+                    <th class="hashtag col-3">해시태그</th>
+                    <th class="user-id col">작성자</th>
+                    <th class="created-at col">    작성일</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>첫 글</td>
-                    <td>#java</td>
-                    <td>lala9663</td>
-                    <td>2023-02-01</td>
+                    <td class="title">첫 글</td>
+                    <td class="hashtag">#java</td>
+                    <td class="user-id">lala9663</td>
+                    <td class="crated-at">2023-02-01</td>
                 </tr>
                 <tr>
                     <td>두번째 글</td>
@@ -111,7 +111,10 @@
     </main>
 
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <hr>
+        푸터 삽입부
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
