--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -18,6 +18,7 @@
     <header id="header"></header>
 
     <main class="container">
+
         <div class="row">
             <div class="card card-margin search-form">
                 <div class="card-body p-0">
@@ -54,62 +55,56 @@
                 </div>
             </div>
         </div>
-        <!--<form>
-            <label for="search-type" hidden>유형</label>
-            <select id="search-type" name="search-type">
-                <option>제목</option>
-                <option>본문</option>
-                <option>ID</option>
-                <option>닉네임</option>
-                <option>해시태그</option>
-            </select>
-            <label for="search-value" hidden>검색어</label>
-            <input id="search-value" type="search" placeholder="검색어..." name="search-value">
-            <button type="submit">검색</button>
-        </form>
--->
-        <table class="table" id="article-table">
-            <thead>
+
+        <div class="row">
+            <table class="table" id="article-table">
+                <thead>
                 <tr>
-                    <th class="title col-6">제목</th>
-                    <th class="hashtag col-3">해시태그</th>
-                    <th class="user-id col">작성자</th>
-                    <th class="created-at col">    작성일</th>
+                    <th class="title col-6"><a>제목</a></th>
+                    <th class="hashtag col-2"><a>해시태그</a></th>
+                    <th class="user-id"><a>작성자</a></th>
+                    <th class="created-at"><a>작성일</a></th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 <tr>
-                    <td class="title">첫 글</td>
-                    <td class="hashtag">#java</td>
-                    <td class="user-id">lala9663</td>
-                    <td class="crated-at">2023-02-01</td>
+                    <td class="title"><a>첫글</a></td>
+                    <td class="hashtag"><span class="badge text-bg-secondary mx-1"><a class="text-reset">#java</a></span></td>
+                    <td class="user-id">Uno</td>
+                    <td class="created-at"><time>2022-01-01</time></td>
                 </tr>
                 <tr>
-                    <td>두번째 글</td>
+                    <td>두번째글</td>
                     <td>#spring</td>
-                    <td>lala9663</td>
-                    <td>2023-02-01</td>
+                    <td>Uno</td>
+                    <td><time>2022-01-02</time></td>
                 </tr>
                 <tr>
-                    <td>세번째 글</td>
+                    <td>세번째글</td>
                     <td>#java</td>
-                    <td>lala9663</td>
-                    <td>2023-02-01</td>
+                    <td>Uno</td>
+                    <td><time>2022-01-03</time></td>
                 </tr>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
 
-        <nav id="pagination" aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </nav>
+        <div class="row">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <a class="btn btn-primary me-md-2" role="button" id="write-article">글쓰기</a>
+            </div>
+        </div>
 
-
+        <div class="row">
+            <nav id="pagination" aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
-
 
     <footer id="footer">
         <hr>
